--- a/notebooks/1-expression-preprocessing.ipynb
+++ b/notebooks/1-expression-preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,8 +12,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create dataframe by transposing matrix"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,11 +38,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
     "expression_df.to_csv('../data/raw/POG570_TPM.tsv', sep='\\t')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Raw data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "expression_raw_df = pd.read_csv('../data/raw/POG570_TPM.tsv', sep='\\t', index_col = 0)"
    ]
   },
   {
@@ -47,48 +70,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "expression_df = pd.read_csv('../data/raw/POG570_TPM.tsv', sep='\\t')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
     "minmax_scaler = MinMaxScaler()\n",
-    "expression_scaled_matrix = minmax_scaler.fit_transform(expression_df.iloc[:, 1:])"
+    "expression_minmax_matrix = minmax_scaler.fit_transform(expression_raw_df.iloc[:, 1:])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
-    "expression_scaled_df = pd.DataFrame(expression_scaled_matrix, columns=expression_df.iloc[:, 1:].columns.get_values())"
+    "expression_minmax_df = pd.DataFrame(expression_minmax_matrix, columns=expression_raw_df.iloc[:, 1:].columns.get_values())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
-    "expression_scaled_df.insert(0, 'pog_id', expression_df.index.get_values())"
+    "expression_minmax_df.insert(0, 'pog_id', expression_raw_df.index.get_values())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
-    "expression_scaled_df.to_csv('../data/processed/expression_tpm_minmax.tsv', sep='\\t')"
+    "expression_minmax_df.to_csv('../data/processed/expression_tpm_minmax.tsv', sep='\\t')"
    ]
   },
   {
@@ -101,16 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "expression_df = pd.read_csv('../data/raw/POG570_TPM.tsv', sep='\\t')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,35 +135,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
-    "expression_scaled_df = pd.DataFrame(transformer.transform(expression_df.iloc[:, 1:]), columns=expression_df.iloc[:, 1:].columns.get_values())#, index=expr_data.index)"
+    "expression_log_df = pd.DataFrame(transformer.transform(expression_raw_df.iloc[:, 1:]), columns=expression_raw_df.iloc[:, 1:].columns.get_values())#, index=expr_data.index)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
-    "expression_scaled_df.to_csv('../data/processed/expression_tpm_log.tsv', sep='\\t')"
+    "expression_log_df.insert(0, 'pog_id', expression_raw_df.index.get_values())"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 118,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## Feature selection"
+    "expression_log_df.to_csv('../data/processed/expression_tpm_log.tsv', sep='\\t')"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 122,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 3, 2, ..., 0, 0, 0],\n",
+       "       [0, 2, 2, ..., 0, 0, 0],\n",
+       "       [0, 3, 2, ..., 0, 0, 0],\n",
+       "       ...,\n",
+       "       [3, 3, 2, ..., 0, 0, 0],\n",
+       "       [0, 3, 2, ..., 0, 0, 0],\n",
+       "       [0, 3, 2, ..., 0, 0, 0]])"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "Using 299 cancer genes as described in"
+    "transformer.transform(expression_raw_df.iloc[:, 1:])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
