Add hdf instead of tsv

--- a/notebooks/1-expression-preprocessing.ipynb
+++ b/notebooks/1-expression-preprocessing.ipynb
@@ -231,11 +231,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "expression_log_minmax_df.to_csv('../data/processed/expression_tpm_log_minmax.tsv', sep='\\t')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "expression_log_minmax_df.to_hdf('../data/hdf5/expresion_tpm_log_minmax.tsv', key='log_minmax')"
    ]
   },
   {
